--- a/install/kubernetes/cilium/templates/clustermesh-config/clustermesh-secret.yaml
+++ b/install/kubernetes/cilium/templates/clustermesh-config/clustermesh-secret.yaml
@@ -16,9 +16,15 @@ metadata:
 
 data:
   {{- $kvstoremesh := and .Values.clustermesh.useAPIServer .Values.clustermesh.apiserver.kvstoremesh.enabled }}
-  {{- $override := ternary (printf "https://clustermesh-apiserver.%s.svc:2379" (include "cilium.namespace" .)) "" $kvstoremesh }}
+  {{- /* Use cluster IP if provided, otherwise fall back to DNS name */}}
+  {{- $defaultEndpoint := printf "https://clustermesh-apiserver.%s.svc:2379" (include "cilium.namespace" .) }}
+  {{- if and $kvstoremesh .Values.clustermesh.config.localCluster.ips }}
+    {{- $defaultEndpoint = printf "https://%s:2379" (index .Values.clustermesh.config.localCluster.ips 0) }}
+  {{- end }}
+  {{- $override := ternary $defaultEndpoint "" $kvstoremesh }}
   {{- $local_etcd := and $kvstoremesh (eq .Values.clustermesh.apiserver.kvstoremesh.kvstoreMode "external") }}
-  {{- range (include "clustermesh-clusters" . | fromJson) }}
+  {{- $clusters := (include "clustermesh-clusters" . | fromJson) }}
+  {{- range $name, $cluster := $clusters }}
   {{ .name }}: {{ include "clustermesh-config-generate-etcd-cfg" (list . $.Values.clustermesh.config.domain $override $local_etcd $.Values.etcd ) | b64enc }}
   {{- /* The parenthesis around .tls are required, since it can be null: https://stackoverflow.com/a/68807258 */}}
   {{- if and (eq $override "") (.tls).cert (.tls).key }}
@@ -28,5 +34,34 @@ data:
   {{ .name }}.etcd-client.key: {{ .tls.key }}
   {{ .name }}.etcd-client.crt: {{ .tls.cert }}
   {{- end }}
+  {{- end }}
+  {{- if $.Values.clustermesh.useAPIServer }}
+    {{- $localName := default "default" $.Values.cluster.name }}
+    {{- if not (hasKey $clusters $localName) }}
+      {{- $localCluster := dict "name" $localName }}
+      {{- $_ := set $localCluster "port" 2379 }}
+      {{- with $.Values.clustermesh.config.localCluster }}
+        {{- with .address }}
+          {{- $_ = set $localCluster "address" . }}
+        {{- end }}
+        {{- with .port }}
+          {{- $_ = set $localCluster "port" . }}
+        {{- end }}
+        {{- with .ips }}
+          {{- $_ = set $localCluster "ips" . }}
+        {{- end }}
+        {{- with .tls }}
+          {{- $_ = set $localCluster "tls" . }}
+        {{- end }}
+      {{- end }}
+      {{ $localName }}: {{ include "clustermesh-config-generate-etcd-cfg" (list $localCluster $.Values.clustermesh.config.domain $override $local_etcd $.Values.etcd ) | b64enc }}
+      {{- if and (eq $override "") ($localCluster.tls).cert ($localCluster.tls).key }}
+      {{- if ($localCluster.tls).caCert }}
+      {{ $localName }}.etcd-client-ca.crt: {{ ($localCluster.tls).caCert }}
+      {{- end }}
+      {{ $localName }}.etcd-client.key: {{ ($localCluster.tls).key }}
+      {{ $localName }}.etcd-client.crt: {{ ($localCluster.tls).cert }}
+      {{- end }}
+    {{- end }}
   {{- end }}
 {{- end }}
