--- a/install/kubernetes/cilium/values.yaml
+++ b/install/kubernetes/cilium/values.yaml
@@ -3355,6 +3355,12 @@ clustermesh:
   # used with ``clustermesh.config.enabled=true``. Refer to the 
   # ``clustermesh.config.enabled=true``documentation for more information.
   useAPIServer: false
+  # -- Read local CiliumEndpoint data from the ClusterMesh API server etcd cache
+  # instead of watching the Kubernetes CRD.
+  readCiliumEndpointsFromEtcd: false
+  # -- Read local CiliumEndpointSlice data from the ClusterMesh API server etcd cache
+  # instead of watching the Kubernetes CRD.
+  readCiliumEndpointSlicesFromEtcd: false
   # -- The maximum number of clusters to support in a ClusterMesh. This value
   # cannot be changed on running clusters, and all clusters in a ClusterMesh
   # must be configured with the same value. Values > 255 will decrease the
@@ -3396,6 +3402,10 @@ clustermesh:
     # type: [object, array]
     # @schema
     clusters: []
+    # -- Optional overrides for the automatically generated local cluster configuration
+    # that is added to the cilium-clustermesh secret whenever clustermesh.useAPIServer
+    # is enabled. This accepts the same fields as entries defined under clusters.
+    localCluster: {}
     # You can use a dict of clusters (recommended):
     # clusters:
     #   # -- Name of the cluster
